--- a/src/index.html
+++ b/src/index.html
@@ -8,82 +8,83 @@
     >
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css" >
   </head>
   <body>
-    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post"
-    >
-      <fieldset class="group">
-        <legend>Personal information</legend>
-          <label class="form-field">
-            Surname:
-            <input 
-            type="text" 
-            name="surname" 
-            autocomplete="off" 
-            required
-            >
-          </label>
-          <label class="form-field">
-            Name:
-            <input 
-            type="text" 
-            name="name" 
-            autocomplete="off" 
-            required
-            >
-          </label>
-          <label class="form-field">
-            How old are You?
-            <input 
-            type="number" 
-            name="age" 
-            size="2" 
-            min="1" 
-            max="100" 
-            value="12" 
-            required
-            >
-          </label>
-          <label class="form-field">
-            Full date of birth
-            <input 
-            type="date" 
-            name="birthdate" 
-            required
-            >
-          </label>
-          <label class="form-field">
-            I accept the term of the agreement
-            <input 
-            type="checkbox" 
-            name="terms_and_conditions" 
-            required
-            >
-          </label>
-      </fieldset>
-        <fieldset class="group" >
-          <legend>Registration</legend>
-          <label class="form-field">
-            Email:
-            <input 
-            type="email" 
-            name="email" 
-            placeholder="email@example.com" 
-            required
-            >
-          </label>
-          <label class="form-field">
-            Password:
-            <input 
-            type="password" 
-            name="password" 
-            minlength="5" 
-            maxlength="10" 
-            required
-            >
-          </label>
-        </fieldset>
+    <h1>HTML Form</h1>
+        <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post"
+        >
+          <fieldset class="group">
+            <legend>Personal information</legend>
+              <label class="form-field">
+              Surname:
+              <input 
+                type="text" 
+                name="surname" 
+                autocomplete="off" 
+                required
+              >
+              </label>
+              <label class="form-field">
+              Name:
+              <input 
+                type="text" 
+                name="name" 
+                autocomplete="off" 
+                required
+              >
+              </label>
+              <label class="form-field">
+              How old are You?
+              <input 
+                type="number" 
+                name="age" 
+                size="2" 
+                min="1" 
+                max="100" 
+                value="12" 
+                required
+              >
+              </label>
+              <label class="form-field">
+              Full date of birth
+              <input 
+                type="date" 
+                name="birthdate" 
+                required
+              >
+              </label>
+              <label class="form-field">
+              I accept the term of the agreement
+              <input 
+                type="checkbox" 
+                name="terms_and_conditions" 
+                required
+              >
+              </label>
+          </fieldset>
+          <fieldset class="group" >
+            <legend>Registration</legend>
+              <label class="form-field">
+              Email:
+              <input 
+                type="email" 
+                name="email" 
+                placeholder="email@example.com" 
+                required
+              >
+              </label>
+              <label class="form-field">
+              Password:
+              <input 
+                type="password" 
+                name="password" 
+                minlength="5" 
+                maxlength="10" 
+                required
+              >
+              </label>
+          </fieldset>
           <fieldset class="group">
             <legend>An interesting fact about you!</legend>
               <label class="form-field">
@@ -112,10 +113,10 @@
               <label class="form-field">
                 How do you rate our work?
                 <input 
-                type="range" 
-                name="rate_work" 
-                min="0" 
-                max="100"
+                  type="range" 
+                  name="rate_work" 
+                  min="0" 
+                  max="100"
                 >
               </label>
           </fieldset>
@@ -124,9 +125,9 @@
               <label class="form-field">
                 Comments:
                 <textarea 
-                name="Comments" 
-                cols="30" 
-                rows="5"
+                  name="Comments" 
+                  cols="30" 
+                  rows="5"
                 >
               </textarea>
               </label>
